--- a/backup/codefresh-backup-to-s3.yml
+++ b/backup/codefresh-backup-to-s3.yml
@@ -40,7 +40,7 @@ steps:
     commands:
       - tar -zcvf cf-backup-$DATE.tar.gz backup/$DATE/
       - echo "Uploading to S3"
-      - aws s3 cp cf-backup-$DATE.tar.gz $S3_URL/cf-backup-$DATE.tar.gz
+      - aws s3 cp "cf-backup-$DATE.tar.gz" "$S3_URL/cf-backup-$DATE.tar.gz"
       - rm cf-backup-$DATE.tar.gz
       - rm -r backup/$DATE
     environment:
