--- a/backup/codefresh-backup-to-s3.yml
+++ b/backup/codefresh-backup-to-s3.yml
@@ -41,7 +41,7 @@ steps:
       - tar -zcvf cf-backup-$DATE.tar.gz backup/$DATE/
       - echo "Uploading to S3"
       - echo S3_URL
-      - aws s3 cp cf-backup-$DATE.tar.gz $S3_URL/cf-backup-$DATE.tar.gz"
+      - aws s3 cp cf-backup-$DATE.tar.gz $S3_URL/cf-backup-$DATE.tar.gz
       - rm cf-backup-$DATE.tar.gz
       - rm -r backup/$DATE
     environment:
