--- a/backup/codefresh-backup-to-s3.yml
+++ b/backup/codefresh-backup-to-s3.yml
@@ -47,4 +47,4 @@ steps:
     environment:
       - AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY}}
       - AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_KEY}}
-      - S3_URL=${{$S3_BUCKET_URL}}
+      - S3_URL=${{S3_BUCKET_URL}}
