--- a/local-volumes/templates/mkdir-pod.yaml
+++ b/local-volumes/templates/mkdir-pod.yaml
@@ -1,4 +1,7 @@
 {{- if .Values.mkdirPods }}
+{{- if empty .Values.mkdirPods.nodes }}
+{{- fail "mkdirPod cannot run - No nodes in .Values.mkdirPods.nodes" }}
+{{- end }}
 {{- $pathes := list }}
 {{- range $k, $v := .Values.volumes }}
 
