fixed validator for loval volumes

--- a/local-volumes/templates/mkdir-pod.yaml
+++ b/local-volumes/templates/mkdir-pod.yaml
@@ -30,6 +30,12 @@ metadata:
     chart: "{{ $.Chart.Name }}-{{ $.Chart.Version }}"
     release: "{{ $.Release.Name }}"
     heritage: "{{ $.Release.Service }}"
+  annotations:
+    # This is what defines this resource as a hook. Without this line, the
+    # job is considered part of the release.
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   restartPolicy: Never
   nodeSelector: 
