--- a/local-volumes/Chart.yaml
+++ b/local-volumes/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: "v1"
 name: local-volumes
 version: 1.0.0
-kubeVersion: "1.10.0 - 2.0.0"
+#kubeVersion: "1.10.0 - 2.0.0"
 description: Creates local volumes for Codefresh onprem installation
 keywords:
   - codefresh
@@ -16,4 +16,4 @@ maintainers:
 engine: gotpl 
 icon: https://codefresh.io/docs/assets/brand/codefresh-social-logo.png
 appVersion: v2.0.10
-tillerVersion: ">2.12.0"
+#tillerVersion: ">2.12.0"
