--- a/validator/templates/storageclasses/pvcs.yaml
+++ b/validator/templates/storageclasses/pvcs.yaml
@@ -65,9 +65,9 @@ metadata:
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": post-install
-    "helm.sh/hook-weight": "-5"
-    "helm.sh/hook-delete-policy": hook-succeeded
+    # "helm.sh/hook": post-install
+    # "helm.sh/hook-weight": "-5"
+    # "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   restartPolicy: Never
   terminationGracePeriodSeconds: 10
