--- a/tiller-rbac-config-codefresh.yaml
+++ b/tiller-rbac-config-codefresh.yaml
@@ -2,18 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: tiller
-  namespace: kube-system
+  name: tillerserviceaccount
+  namespace: codefresh
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: tiller
+  name: tiller-binding
+  namespace: codefresh
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  kind: Role
+  name: tiller-manager
 subjects:
   - kind: ServiceAccount
-    name: tiller
-    namespace: kube-system
+    name: tillerserviceaccount
+    namespace: codefresh
