--- a/openshift/codefresh-project/0-codefresh-project.yaml
+++ b/openshift/codefresh-project/0-codefresh-project.yaml
@@ -4,8 +4,8 @@ metadata:
   annotations:
     openshift.io/description: Codefresh Services
     openshift.io/display-name: Codefresh
-#    openshift.io/requester: system:admin
-    openshift.io/sa.scc.mcs: s0:c11,c10
+#   openshift.io/node-selector: node-type:codefresh
+    openshift.io/sa.scc.mcs: s0
     openshift.io/sa.scc.supplemental-groups: 0/10000
     openshift.io/sa.scc.uid-range: 0/1
   name: codefresh
