--- a/openshift/tiller/tiller-deploy.yaml
+++ b/openshift/tiller/tiller-deploy.yaml
@@ -33,8 +33,8 @@ spec:
           value: codefresh
         - name: TILLER_HISTORY_MAX
           value: "20"
-        image: os-registry.cf-cd.com:5000/gcr.io/kubernetes-helm/tiller:v2.15.2
-        #image: gcr.io/kubernetes-helm/tiller:v2.15.2
+        #image: os-registry.cf-cd.com:5000/gcr.io/kubernetes-helm/tiller:v2.15.2
+        image: gcr.io/kubernetes-helm/tiller:v2.15.2
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
