--- a/openshift/tiller/tiller-deploy.yaml
+++ b/openshift/tiller/tiller-deploy.yaml
@@ -25,8 +25,8 @@ spec:
         name: tiller
     spec:
       automountServiceAccountToken: true
-      imagePullSecrets:
-      - name: private-docker-registry
+      # imagePullSecrets:
+      # - name: private-docker-registry
       containers:
       - env:
         - name: TILLER_NAMESPACE
