--- a/chart/codefresh/charts/consul/templates/consul.yaml
+++ b/chart/codefresh/charts/consul/templates/consul.yaml
@@ -147,10 +147,10 @@ spec:
       {{- if .Values.serviceAccountName }}
       serviceAccountName: {{ .Values.serviceAccountName }}
       {{- end }}
-      {{- with .Values.securityContext }}
-      securityContext:
-{{ toYaml . | indent 8}}
-      {{- end }}
+      # {{- with .Values.securityContext }}
+      # securityContext:
+# {{ toYaml . | indent 8}}
+      # {{- end }}
       {{- if eq .Values.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
@@ -230,8 +230,8 @@ spec:
         - name: DNSPORT
           value: "{{ .Values.ConsulDnsPort }}"
         volumeMounts:
-        - name: datadir
-          mountPath: /var/lib/consul
+#         - name: datadir
+#           mountPath: /var/lib/consul
         - name: gossip-key
           mountPath: /etc/consul/secrets
           readOnly: true
@@ -296,32 +296,32 @@ spec:
         secret:
           secretName: {{ template "consul.fullname" . }}-gossip-key
 
-{{- $existingPvc :=  ( include "consul.existingPvc" . ) -}}
-{{- $storageClass :=  ( include "consul.storageClass" . ) -}}
-{{- $storageSize :=  ( include "consul.storageSize" . ) -}}
+# {{- $existingPvc :=  ( include "consul.existingPvc" . ) -}}
+# {{- $storageClass :=  ( include "consul.storageClass" . ) -}}
+# {{- $storageSize :=  ( include "consul.storageSize" . ) -}}
 
-      {{- if $existingPvc }}
-      - name: datadir
-        persistentVolumeClaim:
-          claimName: {{ $existingPvc }}
-      {{- end }}    
-  {{- if not $existingPvc }}        
-  volumeClaimTemplates:
-  - metadata:
-      name: datadir
-      annotations:
-      # backword compatibility
-      {{- if not $storageClass }}
-        volume.alpha.kubernetes.io/storage-class: default
-      {{- end }}
-    spec:
-      accessModes:
-        - "ReadWriteOnce"
-      resources:
-        requests:
-          # upstream recommended max is 700M
-          storage: "{{ $storageSize }}"
-      {{- if $storageClass }}
-      storageClassName: {{ $storageClass | quote }}
-      {{- end }}  
-  {{- end }}
+      # {{- if $existingPvc }}
+      # - name: datadir
+        # persistentVolumeClaim:
+          # claimName: {{ $existingPvc }}
+      # {{- end }}    
+  # {{- if not $existingPvc }}        
+  # volumeClaimTemplates:
+  # - metadata:
+      # name: datadir
+      # annotations:
+      # # backword compatibility
+      # {{- if not $storageClass }}
+        # volume.alpha.kubernetes.io/storage-class: default
+      # {{- end }}
+    # spec:
+      # accessModes:
+        # - "ReadWriteOnce"
+      # resources:
+        # requests:
+          # # upstream recommended max is 700M
+          # storage: "{{ $storageSize }}"
+      # {{- if $storageClass }}
+      # storageClassName: {{ $storageClass | quote }}
+      # {{- end }}  
+  # {{- end }}
