--- a/chart/codefresh/charts/helm-repo-manager/templates/deployment.yaml
+++ b/chart/codefresh/charts/helm-repo-manager/templates/deployment.yaml
@@ -32,9 +32,9 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           {{- if .Values.global.privateRegistry }} 
-          image: "{{ .Values.global.dockerRegistry }}{{ .Values.image.name }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.global.dockerRegistry }}{{ .Values.image.name }}:{{ .Values.imageTag }}"
           {{- else }}
-          image: "{{ .Values.image.dockerRegistry }}{{ .Values.image.name }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.dockerRegistry }}{{ .Values.image.name }}:{{ .Values.imageTag }}"
           {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
