--- a/openshift/routes/cfapi-route.yaml
+++ b/openshift/routes/cfapi-route.yaml
@@ -2,12 +2,12 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: cf-cfapi
-  namespace: codefresh
+  namespace: codefresh-dev
 spec:
   host: g.apps-os-t1.cf-cd.com
   path: /api
   port:
-    targetPort: 80
+    targetPort: 8080
   tls:
     termination: edge
   to:
