--- a/chart/codefresh/charts/hermes/templates/deployment.yaml
+++ b/chart/codefresh/charts/hermes/templates/deployment.yaml
@@ -58,14 +58,23 @@ spec:
               secretKeyRef:
                 name: "{{ .Release.Name }}-{{ .Values.global.codefresh }}"
                 key: newrelic-license-key
+          # - name: STORE_HOST
+          #   value: "{{ .Release.Name }}-{{ .Values.redis.nameOverride }}"
+          # - name: STORE_PORT
+          #   value: {{ .Values.redis.port | quote }}
+          # - name: STORE_PASSWORD
+          #   valueFrom:
+          #     secretKeyRef:
+          #       name: "{{ .Release.Name }}-{{ .Values.redis.nameOverride }}"
+          #       key: redis-password
           - name: STORE_HOST
-            value: "{{ .Release.Name }}-{{ .Values.redis.nameOverride }}"
+            value: {{ default (printf "%s-%s" .Release.Name .Values.global.redisService) .Values.global.redisUrl }}
           - name: STORE_PORT
             value: {{ .Values.redis.port | quote }}
           - name: STORE_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: "{{ .Release.Name }}-{{ .Values.redis.nameOverride }}"
+                name: "{{ .Release.Name }}-{{ .Values.global.codefresh }}"
                 key: redis-password
           - name: TYPES_CONFIG
             value: {{ default "/etc/hermes/type_config.json" .Values.types_config }}
