--- a/chart/codefresh/charts/hermes/requirements.yaml
+++ b/chart/codefresh/charts/hermes/requirements.yaml
@@ -2,4 +2,5 @@ dependencies:
 - name: redis
   version: ~1.1.26
   repository: file://local-charts/redis
+  condition: redis.enabled
 #  repository: https://kubernetes-charts.storage.googleapis.com/
