--- a/examples/runtime-env/register-node-job.yaml
+++ b/examples/runtime-env/register-node-job.yaml
@@ -18,11 +18,11 @@ spec:
           - |
             #!/bin/sh​
             set -e
-            NODE_NAME=test-node
+            NODE_NAME=test-node-1
             SUBDOMAIN=test
-            NODE_ADDRESS=mdzhlbmac07.standard.six-group.net
+            NODE_ADDRESS=52.44.198.132
             CONSUL="http://cf-consul.codefresh-dev.svc:8500"
-            ACCOUNT=test-non-tls
+            ACCOUNT=test-node-1
             ROLE=builder
             PROVIDER='
             { 
@@ -43,7 +43,7 @@ spec:
                     "type_builder"
                 ],
                 "Address": "'${NODE_ADDRESS}'",
-                "Port": 4243
+                "Port": 2376
                 },
                 "Check": {
                 "Node": "",
