--- a/chart/codefresh/charts/cronus/templates/deployment.yaml
+++ b/chart/codefresh/charts/cronus/templates/deployment.yaml
@@ -29,12 +29,14 @@ spec:
         kind: {{ .Values.event.kind }}
         action: {{ .Values.event.action }}
     spec:
-      {{- if .Values.persistence }}
       volumes:
         - name: boltdb-store
+          {{- if .Values.persistence }}
           persistentVolumeClaim:
             claimName: {{ include "cronus.pvcName" . }}
-      {{- end }}
+          {{- else }}
+          emptyDir: {}
+          {{- end }}
       imagePullSecrets:
         - name: "{{ .Release.Name }}-{{ .Values.global.codefresh }}-registry"
       containers:
@@ -66,11 +68,9 @@ spec:
               value: {{ .Values.service.internalPort | quote }}
             - name: STORE_FILE
               value: "/var/boltdb/events.db"
-          {{- if .Values.persistence }}
           volumeMounts:
             - mountPath: "/var/boltdb"
               name: boltdb-store
-          {{- end }}
           livenessProbe:
             httpGet:
               path: /health
