--- a/chart/codefresh/charts/consul/templates/consul.yaml
+++ b/chart/codefresh/charts/consul/templates/consul.yaml
@@ -230,8 +230,10 @@ spec:
         - name: DNSPORT
           value: "{{ .Values.ConsulDnsPort }}"
         volumeMounts:
-#         - name: datadir
-#           mountPath: /var/lib/consul
+        {{- if .Values.persistence.enable }}
+        - name: datadir
+          mountPath: /var/lib/consul
+        {{- end }}
         - name: gossip-key
           mountPath: /etc/consul/secrets
           readOnly: true
@@ -295,33 +297,34 @@ spec:
       - name: gossip-key
         secret:
           secretName: {{ template "consul.fullname" . }}-gossip-key
+{{- if .Values.persistence.enable }}
+{{- $existingPvc :=  ( include "consul.existingPvc" . ) -}}
+{{- $storageClass :=  ( include "consul.storageClass" . ) -}}
+{{- $storageSize :=  ( include "consul.storageSize" . ) -}}
 
-# {{- $existingPvc :=  ( include "consul.existingPvc" . ) -}}
-# {{- $storageClass :=  ( include "consul.storageClass" . ) -}}
-# {{- $storageSize :=  ( include "consul.storageSize" . ) -}}
-
-      # {{- if $existingPvc }}
-      # - name: datadir
-        # persistentVolumeClaim:
-          # claimName: {{ $existingPvc }}
-      # {{- end }}    
-  # {{- if not $existingPvc }}        
-  # volumeClaimTemplates:
-  # - metadata:
-      # name: datadir
-      # annotations:
-      # # backword compatibility
-      # {{- if not $storageClass }}
-        # volume.alpha.kubernetes.io/storage-class: default
-      # {{- end }}
-    # spec:
-      # accessModes:
-        # - "ReadWriteOnce"
-      # resources:
-        # requests:
-          # # upstream recommended max is 700M
-          # storage: "{{ $storageSize }}"
-      # {{- if $storageClass }}
-      # storageClassName: {{ $storageClass | quote }}
-      # {{- end }}  
-  # {{- end }}
+      {{- if $existingPvc }}
+      - name: datadir
+        persistentVolumeClaim:
+          claimName: {{ $existingPvc }}
+      {{- end }}    
+  {{- if not $existingPvc }}        
+  volumeClaimTemplates:
+  - metadata:
+      name: datadir
+      annotations:
+      # backword compatibility
+      {{- if not $storageClass }}
+        volume.alpha.kubernetes.io/storage-class: default
+      {{- end }}
+    spec:
+      accessModes:
+        - "ReadWriteOnce"
+      resources:
+        requests:
+          # upstream recommended max is 700M
+          storage: "{{ $storageSize }}"
+      {{- if $storageClass }}
+      storageClassName: {{ $storageClass | quote }}
+      {{- end }}  
+  {{- end }}
+{{- end }}
